--- a/pages/ps5/ps5.html
+++ b/pages/ps5/ps5.html
@@ -130,20 +130,20 @@
       <input type="checkbox" id="menu" name="menu" class="m-menu__checkbox" checked>
 <div class="m-menu">
 <div class="m-menu__header">
-<a href="https://hv-leaf.github.io/Ch3at/pages/nintendo.html" rel="noopener noreferrer">
+<a href="https://hv-leaf.github.io/Ch3at/pages/sony.html" rel="noopener noreferrer">
   <svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs">
     <path d="M19 12H6M12 5l-7 7 7 7"/>
   </svg>
 </a>
 
-<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
+<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
         <!-- Catalog starts here -->   
 
-<!-- nes # -->
+<!-- ps5 # -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/09.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(#)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/09.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(#)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -152,14 +152,14 @@
     </a>
     </ul>
 </li>
-<!-- End nes #-->
+<!-- End ps5 #-->
 
 
-<!-- nes a -->
+<!-- ps5 a -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/a.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(a)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/a.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(a)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -168,13 +168,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes a-->
+<!-- End ps5 a-->
 
-<!-- nes b -->
+<!-- ps5 b -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/b.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(b)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/b.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(b)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -183,13 +183,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes b-->
+<!-- End ps5 b-->
 
-<!-- nes c -->
+<!-- ps5 c -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/c.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(c)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/c.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(c)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -198,13 +198,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes c-->
+<!-- End ps5 c-->
 
-<!-- nes d -->
+<!-- ps5 d -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/d.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(d)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/d.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(d)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -213,12 +213,12 @@
     </a>
     </ul>
 </li>
-<!-- End nes d-->
-<!-- nes e -->
+<!-- End ps5 d-->
+<!-- ps5 e -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/e.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(e)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/e.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(e)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -227,13 +227,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes e-->
+<!-- End ps5 e-->
 
-<!-- nes f -->
+<!-- ps5 f -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/f.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(f)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/f.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(f)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -242,13 +242,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes f-->
+<!-- End ps5 f-->
 
-<!-- nes g -->
+<!-- ps5 g -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/g.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(g)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/g.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(g)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -257,13 +257,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes g-->
+<!-- End ps5 g-->
 
-<!-- nes h -->
+<!-- ps5 h -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/h.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(h)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/h.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(h)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -272,13 +272,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes h-->
+<!-- End ps5 h-->
 
-<!-- nes i -->
+<!-- ps5 i -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/i.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(i)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/i.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(i)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -287,13 +287,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes i-->
+<!-- End ps5 i-->
 
-<!-- nes j -->
+<!-- ps5 j -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/j.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(j)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/j.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(j)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -302,13 +302,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes j-->
+<!-- End ps5 j-->
 
-<!-- nes k -->
+<!-- ps5 k -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/k.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(k)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/k.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(k)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -317,13 +317,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes k-->
+<!-- End ps5 k-->
 
-<!-- nes l -->
+<!-- ps5 l -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/l.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(l)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/l.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(l)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -332,13 +332,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes l-->
+<!-- End ps5 l-->
 
-<!-- nes m -->
+<!-- ps5 m -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/m.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(m)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/m.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(m)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -347,13 +347,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes m-->
+<!-- End ps5 m-->
 
-<!-- nes n -->
+<!-- ps5 n -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/n.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(n)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/n.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(n)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -362,13 +362,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes n-->
+<!-- End ps5 n-->
 
-<!-- nes o -->
+<!-- ps5 o -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/o.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(o)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/o.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(o)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -377,13 +377,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes o-->
+<!-- End ps5 o-->
 
-<!-- nes p -->
+<!-- ps5 p -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/p.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(p)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/p.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(p)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -392,13 +392,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes p-->
+<!-- End ps5 p-->
 
-<!-- nes q -->
+<!-- ps5 q -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/q.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(q)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/q.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(q)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -407,13 +407,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes q-->
+<!-- End ps5 q-->
 
-<!-- nes r -->
+<!-- ps5 r -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/r.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(r)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/r.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(r)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -422,13 +422,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes r-->
+<!-- End ps5 r-->
 
-<!-- nes s -->
+<!-- ps5 s -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/s.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(s)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/s.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(s)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -437,13 +437,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes s-->
+<!-- End ps5 s-->
 
-<!-- nes t -->
+<!-- ps5 t -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/t.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(t)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/t.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(t)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -452,13 +452,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes t-->
+<!-- End ps5 t-->
 
-<!-- nes u -->
+<!-- ps5 u -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/u.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(u)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/u.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(u)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -467,13 +467,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes u-->
+<!-- End ps5 u-->
 
-<!-- nes v -->
+<!-- ps5 v -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/v.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(v)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/v.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(v)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -482,13 +482,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes v-->
+<!-- End ps5 v-->
 
-<!-- nes w -->
+<!-- ps5 w -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/w.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(w)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/w.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(w)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -497,13 +497,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes w-->
+<!-- End ps5 w-->
 
-<!-- nes x -->
+<!-- ps5 x -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/x.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(x)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/x.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(x)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -512,13 +512,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes x-->
+<!-- End ps5 x-->
 
-<!-- nes y -->
+<!-- ps5 y -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/y.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(y)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/y.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(y)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -527,13 +527,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes y-->
+<!-- End ps5 y-->
 
-<!-- nes z -->
+<!-- ps5 z -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/z.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(z)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/z.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128> <alph>(z)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -542,7 +542,7 @@
     </a>
     </ul>
 </li>
-<!-- End nes z-->
+<!-- End ps5 z-->
     
  <br></br><br></br></ul>
   </div>
